--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
       <scope>test</scope>
     </dependency>
     
+    <!-- 邮件 -->
     <dependency>
 		<groupId>javax.mail</groupId>
 		<artifactId>javax.mail-api</artifactId>
@@ -44,6 +45,13 @@
 		<groupId>com.datastax</groupId>
 		<artifactId>cassandra-driver-core</artifactId>
 		<version>2.0.1</version>
+	</dependency>
+	
+    <!-- 文字过滤 -->
+    <dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.1.0</version>
 	</dependency>
     
   </dependencies>
