--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 		<version>2.0.1</version>
 	</dependency>
 	
+    <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.18</version>
+		</dependency> 
+	
     <!-- 文字过滤 -->
     <dependency>
 		<groupId>javax.servlet</groupId>
